# Aipiler

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  setup.py
einsum/: action.py  constraint.py  equation.py  main.py  range.py  rank.py  tensor.py
einsum/operators/: compute.py
examples/: CMakeLists.txt
examples/2mm/: 2mm_einsum.py  einsum_2mm.mlir  einsum_2mm_n.mlir
examples/CodeGen/: .gitignore  CMakeLists.txt  GenMixCode.cpp  genTelechat.cpp  log.mlir  makefile  print.cpp  run.sh  telechat-module.mlir  telechat.mlir
examples/Deepseek-R1-1.5B/: .gitignore  attn.py  exported_graph.txt  main.py  module.py
examples/Embedding/: .gitignore  CMakeLists.txt  embedding.py  genEmbedding.cpp  makefile  model_parameters.json
examples/Frontend/: export.py  test_backend.py  test_codegen.py  test_exportIR.py  test_ops.py
examples/Gelu/: .gitignore  CMakeLists.txt  gelu.mlir  gelu.py  genGelu.cpp  makefile
examples/LeNet/: dynamic.py  model.py
examples/Linear/: .gitignore  CMakeLists.txt  README.md  launch.cpp  linear.cpp  linear.py  load_model.py  makefile  readbin.py  test.py
examples/LoadWeight/: CMakeLists.txt  load_model.py  load_weight.py  main.cpp  makefile  pytorch_model.bin.index.json  rms  test_load.py
examples/MLP/: .gitignore  CMakeLists.txt  MLP.py  container.h  genMLP.cpp  launch.cpp  makefile  mlp.mlir  model_parameters.json
examples/MLP-LLC/: .gitignore  CMakeLists.txt  MLP.py  genMLP.cpp  makefile
examples/MLP_einsum/: config.py  linear_einsum.py  linear_torch.py  mlp_einsum.py  mlp_torch.py
examples/Mask/: CMakeLists.txt  Mask  Mask.py  genMask.cpp  makefile  print.cpp  print.h
examples/MixedFusedRMSNorm/: .gitignore  CMakeLists.txt  genFusedRMSNorm.cpp  genMixedFusedRMSNorm.cpp  launch.cpp  makefile  mixedFusedRMSNorm.py  model_parameters.json  rms.mlir
examples/OpsOptimization/: makefile  matmul.mlir
examples/RMSNorm_Dyn/: .gitignore  CMakeLists.txt  genMixedFusedRMSNorm.cpp  globals.h  launch.cpp  makefile  memref.cpp  mixedFusedRMSNorm.py  readbin.py
examples/RMSNorm_Matmul/: .gitignore  main.py  rmsnorm_einsum.py  rmsnorm_einsum_mlir.mlir  rmsnorm_torch.py  rmsnorm_torch_mlir.mlir
examples/RotaryEmbedding/: CMakeLists.txt  RotaryEmbedding  RotaryEmbedding.mlir  RotaryEmbedding.py  genRotaryEmbedding.cpp  log1  makefile  test.cpp
examples/SelfAttention/: .gitignore  CMakeLists.txt  SelfAttention.py  genSelfAttention.cpp  genSelfAttention1.cpp  makefile  pylog  self_attention.mlir
examples/Self_attention/: genSelfAttention.cpp  makefile  self_attention.mlir
examples/Telechat_LoadParamsInRuntime/: .gitignore  CMakeLists.txt  genTelechat.cpp  globals.h  launch.cpp  makefile  memref.h  readbin.py
examples/TransformerBlock/: .gitignore  CMakeLists.txt  TransformerBlock  TransformerBlock.mlir  genBlock.cpp  genTransformerBlock.cpp  makefile
frontend/: Eoperator.py  README.md  compute.py  converter.py  data.py  edge.py  executionStrategy.py  graph.py  main.py  memory.py  node.py  opMapper.py
frontend/Python/: test.py
frontend/Python/aipiler/: basic_operator.py  dim.py  dynamo_backend.py  graph.py  primitive.py  tensor.py  utils.py
frontend/Python/aipiler/ops/: __init__.py  elementwise.py  matmul.py
frontend/einsum/: action.py  constraint.py  dsl.py  einsumExpression.py  expression.py  manager.py  rank.py  rankExpression.py  rankVariable.py  tensor.py  term.py  test.py
frontend/einsum/operators/: compute.py  coordinate.py  merge.py  unary.py
frontend/extract_computation_graph/: test_dynamo_telechat.py  test_export_telechat.py
frontend/models_src_code/telechat_src/: modeling_telechat.py
midend/include/Dialect/: CMakeLists.txt
midend/include/Dialect/einsum/: CMakeLists.txt  einsumDialect.h  einsumDialect.td  einsumEnums.td  einsumOps.h  einsumOps.td  einsumTypes.h  einsumTypes.td
midend/include/Dialect/mix/: CMakeLists.txt  mixDialect.h  mixDialect.td  mixOps.h  mixOps.td  mixTypes.h  mixTypes.td
midend/include/Utils/: compileUtils.h  loadPytorchModel.h  logger.h  readjson.h
midend/lib/: CMakeLists.txt
midend/lib/Conversion/: CMakeLists.txt
midend/lib/Dialect/: CMakeLists.txt
midend/lib/Utils/: CMakeLists.txt  compileUtils.cpp  loadPytorchModel.cpp  logger.cpp  readjson.cpp
patch/: ml_program_globalop_bufferize.patch
python/Aipiler/: __init__.py  axis.py  basic_operator.py  benchmark.py  context.py  dim.py  dsl.py  dynamo_backend.py  einsum_importer.py  execution_engine.py  graph.py  interpreter.py  primitive.py  registry.py  runtime.py  tensor.py  utils.py  visitor.py
python/Aipiler/aot/: __init__.py  compiled_module.py  exporter.py
python/Aipiler/datatype/: __init__.py  bool.py  datatype.py  float.py  integer.py  type_mapper.py
python/Aipiler/ffi/: __init__.py  convertor.py  cruntime.py  ffi.py  memref.py
python/Aipiler/lang/: affine.py  comprehension.py  config.py  dsl.py  emitter.py
python/Aipiler/ops/: __init__.py  elementwise.py  matmul.py  ops.py  reduction.py  special.py  unary.py
python/Aipiler/runtime/: device.py  storage.py
python/Aipiler/runtime_Aipiler/: device.py  storage.py
python/Aipiler/utils/: __init__.py  dlpack.py  load_model.py  namer.py  parse_einsum.py  printer.py  utils.py
test/: exported_graph.txt  mlp_export_simple.py  test_RMSNorm_matmul.py  test_advance.py  test_datatypes.py  test_dim.py  test_dsl.py  test_iree.py  test_rank_stream.py  test_symbolic_shape.py  test_symbolic_shape_rms_mm.py  test_tensor.py
test/codegen/: test_gen_op.py  test_map_codegen.py
test/draw_pic/: .gitignore  draw.py
test/test_benchmark/: .gitignore  makefile  mlp_benchmark.py  test_benchmark.py
test/test_codegen/: test1.py  test_gen_func.py  test_tensor_scalar_map.py
test/test_convertor/: makefile  memref.h  print.cpp  print.h  test.cpp  test_convertor.py
test/test_dsl/: test_cascade.py  test_dsl.py  test_mean.py  test_rearrange.py  test_repeat.py  test_unary.py
test/test_load_model/: model.safetensors  test_load_model.py
test/test_rms_norm/: einsum.py
tools/: CMakeLists.txt
tools/mix-opt/: CMakeLists.txt  mix-opt.cpp
(+36 files in other folders)
