add_subdirectory(CodeGen)
add_subdirectory(Gelu)
add_subdirectory(MLP)
# add_subdirectory(SelfAttention)
add_subdirectory(MixedFusedRMSNorm)
add_subdirectory(RotaryEmbedding)
add_subdirectory(Embedding)
add_subdirectory(LoadWeight)
# add_subdirectory(TransformerBlock)
add_subdirectory(Linear)
add_subdirectory(Mask)